# strategy-pattern

./: README.md  pyproject.toml
strategy_pattern/: __init__.py  main.py  string_manipulator.py  string_strategies.py
tests/: test_string_manipulator.py
